# daft-minhash-dedupe

./: .gitignore  FRICTION_LOG.md  README.md  pyproject.toml  pytest.ini
friction/: UNFILTERED_minhash_dedupe_common_crawl.ipynb  cc1_minhash_dedupe.py  connected_components.py  connected_components_reasoning.md  issue_50XX_mre.py  issue_XXX_mre.ipynb  list_construction.py  minhash_dedupe_2.py  minhash_dedupe_common_crawl.ipynb
references/: chengmao_minhash_spark.py  daft_minhash.py
tests/: test_connected_components.py  test_connected_components_nx.py  test_minhash_dedupe_2_unit.py  test_minhash_dedupe_unit.py
workload/: connected_components.py  minhash_dedupe.py  minhash_dedupe_2.py  minhash_dedupe_common_crawl.ipynb  minhash_dedupe_daft.ipynb  minhash_dedupe_tutorial.ipynb  results.txt  utils.py
