[project]
name = "daft-minhash-dedupe"
version = "0.1.0"
description = "Minhash Deduplication Workload over Common Crawl Dataset with Daft"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daft[aws,ray]>=0.6.0",
    "python-dotenv",
    "ipykernel",
    "selectolax",
    "scipy",
    "matplotlib",
    "numpy",
    "pytest>=8.4.2",
    "networkx",
    "pandas",
    "hypothesis",
    "igraph>=0.11.9",
    "uuid_utils",
    "pytest-cov>=6.3.0",
]
